Revert "Added player Movement on gameGUI Needs to be updated"
This reverts commit 535fdd2b0968f8e4f7a237d1ceb8c39cd9e77484.

--- a/MonopolyEmpire/bin/.gitignore
+++ b/MonopolyEmpire/bin/.gitignore
@@ -1,3 +1,25 @@
-/gameGUI$Coordinates.class
+/Brand.class
+/Brutility.class
+/Card.class
+/FreeParking.class
+/GUI$1.class
+/GUI$2.class
+/GUI$3.class
+/GUI$4.class
+/GUI$5.class
+/GUI$6.class
+/GUI$7.class
+/GUI.class
+/Game.class
+/Go.class
+/GoToJail.class
+/JustVisiting.class
+/Main.class
+/Player.class
+/Skyscraper.class
+/Space.class
+/TowerTax.class
+/Utility.class
 /gameGUI$1.class
 /gameGUI$2.class
+/gameGUI.class
